skel added for adduser

--- a/apache2/replace.html
+++ b/apache2/replace.html
@@ -15,7 +15,7 @@ new Vue({
   },
   computed: {
     greeting() {
-      return "Welcome to Website A " + this.name
+      return "Welcome to Website A, " + this.name
     }
   },
 })
