--- a/apache2/replace2.html
+++ b/apache2/replace2.html
@@ -15,7 +15,7 @@ new Vue({
   },
   computed: {
     greeting() {
-      return "Welcome to Website B" + this.name
+      return "Welcome to Website B, " + this.name
     }
   },
 })
