--- a/website/index.html
+++ b/website/index.html
@@ -5,6 +5,7 @@
   </head>
 
   <body>
+    <h2> Salt is awesome </h2>
     <img src="http://i0.kym-cdn.com/entries/icons/original/000/021/971/saltybae.PNG">
   </body>
 </html>
